[package]
edition = "2021"
name = "windows-theme"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]


[build-dependencies]
napi-build = "2.0.1"

[dependencies]
napi = "2"
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
winreg = "0.10"
winapi = { version = "0.3", features = ["winuser", "minwindef"] }
async-trait = "0.1"