[package]
name = "windows-theme"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "2.0.1"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "winreg"] }
winreg = "0.8"
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[profile.release]
lto = true
strip = "symbols"
